k8s/image-handling-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-handling-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-handling
  template:
    metadata:
      labels:
        app: image-handling
    spec:
      containers:
        - image: rsogalerija/imagehandling:1.0.0-SNAPSHOT-28.1
          name: image-handling
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
---

apiVersion: v1
kind: Service
metadata:
  name: image-handling
spec:
  clusterIP: 10.0.247.10
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: image-handling
